--- a/CMS/Content/site-admin.css
+++ b/CMS/Content/site-admin.css
@@ -67,3 +67,14 @@
 .role-box, .user-box {
     min-width: 200px;
 }
+
+.collapse-control {
+    display: none;
+}
+
+.control-toggle, .control-toggle:hover, .control-toggle:focus {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    padding-bottom: 50px;
+}
