--- a/CMS/Views/Admin/ManageRoles.cshtml
+++ b/CMS/Views/Admin/ManageRoles.cshtml
@@ -1,4 +1,4 @@
-﻿@model CMS.Models.ViewModels.EditViewModels.EditRoleViewModel
+﻿@model CMS.Models.ViewModels.ManageRolesViewModel
 
 @{
     ViewBag.Title = "ManageRoles";
@@ -6,14 +6,19 @@
 }
 
 <h2>Role Manager</h2>
+<hr />
 
-@Html.Partial("_CreateRolePartial")
 
-@Html.Partial("_UsersInRole", Model)
+@Html.Partial("_CreateRolePartial", Model.CreateRoleViewModel)
+
+@Html.Partial("_UsersInRole", Model.EditRoleViewModel)
+
+<hr />
 
 @section Scripts {
     <script src="~/Scripts/jquery-2.1.4.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/admin-edit-role.js"></script>
+    <script src="~/Scripts/admin-create-role.js"></script>
 }
