--- a/CMS/Views/Shared/_CreateRolePartial.cshtml
+++ b/CMS/Views/Shared/_CreateRolePartial.cshtml
@@ -1,21 +1,25 @@
-﻿@using (Html.BeginForm())
+﻿@model CMS.Models.ViewModels.CreateViewModels.CreateRoleViewModel
+
+@using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "create-role-form" }))
 {
     @Html.AntiForgeryToken()
+        <div class="form-horizontal">
+            <a href="#" class="control-toggle" data-target="#admin-create-role-control"><div class="dropdown-arrow"></div> Create role</a>
+            <div class="collapse-control" id="admin-create-role-control">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.RoleName, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.RoleName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.RoleName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.RoleName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RoleName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RoleName, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="button" value="Create" class="btn btn-default" id="submit-role-create" />
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
     </div>
 }
