--- a/CMS/Views/Shared/_UsersInRole.cshtml
+++ b/CMS/Views/Shared/_UsersInRole.cshtml
@@ -7,7 +7,7 @@
     <div class="form-horizontal">
         <hr />
         <a href="#" class="control-toggle" data-target="#admin-edit-role-control">
-            <div class="dropdown-arrow"></div> Edit role
+            <div class="dropdown-arrow"></div> Edit users in role
         </a>
 
         <div class="collapse-control" id="admin-edit-role-control">
